[tool.poetry]
name = "answerbot"
version = "0.1.0"
description = ""
authors = ["Alchemmist <anton.ingrish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

